--- a/main.css
+++ b/main.css
@@ -18,3 +18,9 @@ html,body{
     justify-content:start;
     background-color: green;
 }
+
+.apple{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+}
